<resources>
    <string name="app_name">registrationPage</string>
    <string name="registration_page">Registration Page</string>
    <string name="password">password</string>
    <string name="user_name">User-Name</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="state">State</string>
</resources>